--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <!-- This line fixes mobile view globally on ALL pages -->
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    
     <title>ERB – Grace-Focused Teaching</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <!-- Optional but recommended for 2025 -->
+    <meta name="theme-color" content="#000000" />
+    <link rel="icon" href="/favicon.ico" />
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
-
